--- a/index.html
+++ b/index.html
@@ -18,31 +18,32 @@ export var storyboard = (
         display: 'flex',
         flexDirection: 'row',
         justifyContent: 'space-around',
+        alignItems: 'flex-start',
         padding: 40,
       }}
     >
       <div
         style={{
+          width: '45%',
           backgroundColor: 'white',
           padding: 20,
           borderRadius: 8,
           boxShadow: '0 4px 8px rgba(0,0,0,0.1)',
-          width: '45%',
         }}
       >
-        <h2 style={{ fontWeight: 700, fontSize: 20 }}>Playground</h2>
+        <h2 style={{ fontSize: 20, fontWeight: 700 }}>Playground</h2>
         <Playground />
       </div>
       <div
         style={{
+          width: '45%',
           backgroundColor: 'white',
           padding: 20,
           borderRadius: 8,
           boxShadow: '0 4px 8px rgba(0,0,0,0.1)',
-          width: '45%',
         }}
       >
-        <h2 style={{ fontWeight: 700, fontSize: 20 }}>My App</h2>
+        <h2 style={{ fontSize: 20, fontWeight: 700 }}>My App</h2>
         <App />
       </div>
     </Scene>
